// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkipLink should render correctly 1`] = `
<div
  className="sc-bcXHqe fzwuJr"
>
  <a
    className="sc-gswNZR irEuey"
    href="#main"
  >
    Skip to main content
  </a>
</div>
`;

exports[`SkipLink should support arbitrary props 1`] = `
<div
  className="sc-bcXHqe fzwuJr"
>
  <a
    className="sc-gswNZR irEuey"
    href="#main"
  >
    Skip to main content
  </a>
</div>
`;

exports[`SkipLink should support custom class names 1`] = `
<div
  className="sc-bcXHqe fzwuJr custom-classname"
>
  <a
    className="sc-gswNZR irEuey"
    href="#main"
  >
    Skip to main content
  </a>
</div>
`;
